# bazel_rules_hdl

./: MODULE.bazel
.github/workflows/: convert_to_archive_override.py  create_bzlmod_release.yml  generate_release_notes.py  package_submodule_tools.yml  package_tools.py  scan_submodule_tools.py
