###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "rules_hdl",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boost.asio", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.config", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.fusion", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.geometry", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.graph", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.heap", version = "1.83.0")
bazel_dep(name = "boost.icl", version = "1.83.0")
bazel_dep(name = "boost.lambda", version = "1.83.0")
bazel_dep(name = "boost.multi_array", version = "1.83.0")
bazel_dep(name = "boost.phoenix", version = "1.83.0")
bazel_dep(name = "boost.polygon", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.stacktrace", version = "1.83.0")
bazel_dep(name = "boost.serialization", version = "1.83.0")
bazel_dep(name = "boost.property_tree", version = "1.83.0")
bazel_dep(name = "boost.spirit", version = "1.83.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0")
bazel_dep(name = "boost.bind", version = "1.83.0")
bazel_dep(name = "boost.optional", version = "1.83.0")
bazel_dep(name = "boost.thread", version = "1.83.0")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "fmt", version = "11.1.3")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_bison", version = "0.3")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_flex", version = "0.3")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.2.4")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "spdlog", version = "1.15.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.4")
bazel_dep(name = "or-tools", version = "9.12")
bazel_dep(name = "readline", version = "8.2.bcr.1")
bazel_dep(name = "verilator", version = "5.034")
bazel_dep(name = "lemon", version = "1.3.1")
bazel_dep(name = "iverilog", version = "12.0.0")
bazel_dep(name = "abc", version = "0.0.0-20250408-yosyshq.bcr.1")
bazel_dep(name = "ncurses", version = "6.4.20221231.bcr.8")
bazel_dep(name = "llvm-project", version = "17.0.3.bcr.4")
bazel_dep(name = "tcl", version = "8.6.10")
bazel_dep(name = "openroad", version = "1.0.0")
bazel_dep(name = "swig", version = "4.3.0")
bazel_dep(name = "yosys", version = "0.52.0")
bazel_dep(name = "nextpnr", version = "0.8.0")
bazel_dep(name = "icestorm", version = "0.0.1")
bazel_dep(name = "prjtrellis", version = "1.4.0")
bazel_dep(name = "p7zip", version = "24.9.0")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

# Custom patches with our fixes. Some of these are transitive deps.
# It's still necessary to override them here.
git_override(
    module_name = "p7zip",
    commit = "f4490229090f8da4ba188c67bdede3b845d7a0bc",
    remote = "https://github.com/MrAMS/7zip.git",
)

git_override(
    module_name = "prjtrellis",
    commit = "2c62504f499c7a0642a2142f4c76c309a89f2785",
    remote = "https://github.com/MrAMS/prjtrellis.git",
)

git_override(
    module_name = "icestorm",
    commit = "03cc0386e180581f0ede94bc83bf9290875bfdbf",
    remote = "https://github.com/MrAMS/icestorm.git",
)

git_override(
    module_name = "nextpnr",
    commit = "d3aa4468008b46f0c8fc46f1f57bbe6672cbad29",
    remote = "https://github.com/MrAMS/nextpnr.git",
)

git_override(
    module_name = "cxxopts",
    commit = "f5298b3614d974ff4603dec0de0aa999fce3a6ae",
    remote = "https://github.com/MrAMS/cxxopts.git",
)

git_override(
    module_name = "yosys",
    commit = "bc10071628f6f01a20ca8e14b9695c8576369591",
    init_submodules = True,
    remote = "https://github.com/MrAMS/yosys.git",
)

git_override(
    module_name = "swig",
    commit = "64b28ef632d8ca12db479c214bc7aa0fc9eb9d12",
    remote = "https://github.com/MrAMS/swig.git",
)

git_override(
    module_name = "iverilog",
    commit = "5a8b87aaaa6e4f85bdf7e7ed82b581ffc64cb2dd",
    remote = "https://github.com/MrAMS/iverilog.git",
)

git_override(
    module_name = "lemon",
    commit = "685fa0c61eec87eb5b70985487ad72f76c35c3bb",
    remote = "https://github.com/MrAMS/lemon",
)

git_override(
    module_name = "abc",
    commit = "2fa8f6e551a85da586fbe01792e6cfdaa7ce72cc",
    remote = "https://github.com/MrAMS/abc",
)

git_override(
    module_name = "ncurses",
    commit = "f918fafc9f7aeb1745d02e7978597abf8e580de2",
    remote = "https://github.com/MrAMS/ncurses",
)

# tcl - keep amorphic-io fork
git_override(
    module_name = "tcl",
    commit = "e285aca41d39e84ab1753f125b095d65a0e15640",
    remote = "https://github.com/amorphic-io/tcl.git",
)

archive_override(
    module_name = "openroad",
    integrity = "sha256-dqm5iPTLyaiOud1Mtv8KnLUA5e91/3JoxO8WWLz+cHI=",
    urls = ["https://github.com/MrAMS/OpenROAD/releases/download/snapshot-20251213-8045df3/snapshot-20251213-8045df3.tar.gz"],
)

git_override(
    module_name = "bazel-orfs",
    commit = "126765508161956f8f82ae169084da0235230637",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = False,
    python_version = "3.11",
)
python.toolchain(
    ignore_root_user_error = True,
    is_default = False,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_hdl_pip_deps",
    python_version = "3.11",
    requirements_lock = "@rules_hdl//dependency_support:pip_requirements.txt",
)
use_repo(pip, "rules_hdl_pip_deps")

register_toolchains("//verilator:verilator_toolchain")

hdl = use_extension(":extensions.bzl", "hdl_ext")
hdl.skywater_pdk(
    name = "com_google_skywater_pdk",
    libraries = [
        "sky130_fd_io",
        "sky130_fd_sc_hd",
    ],
)
use_repo(hdl, "com_google_skywater_pdk")
use_repo(hdl, "com_google_skywater_pdk_sky130_fd_io")
use_repo(hdl, "com_google_skywater_pdk_sky130_fd_sc_hd")

hdl.asap7_pdk(
    name = "org_theopenroadproject_asap7_pdk",
    libraries = [
        "sc6t_26",
        "sc7p5t_27",
        "sc7p5t_28",
    ],
)
use_repo(hdl, "org_theopenroadproject_asap7_pdk")
use_repo(hdl, "org_theopenroadproject_asap7_pdk_sc7p5t_28")
use_repo(hdl, "org_theopenroadproject_asap7_pdk_sc6t_26")
use_repo(hdl, "org_theopenroadproject_asap7_pdk_sc7p5t_27")
